updating neurons_non-linearities.ipynb

--- a/_notebooks/neurons_non-linearities.ipynb
+++ b/_notebooks/neurons_non-linearities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3ee1393",
+   "id": "2ee71b6b",
    "metadata": {},
    "source": [
     "# \"Understanding how basic linear NNs handle non-linearities\"\n",
@@ -30,9 +30,9 @@
     "Eventually I came across one of the most important papers in this field: **Cybenko (1989, [doi:10.1007/BF02551274](https://link.springer.com/article/10.1007/BF02551274))**. Reading this paper opened my eyes and gave me a completely different perspective on the problem. I realized that the key to the *universal approximation theorem* is that the composition of a linear function and a *sigmoidal* (so-called activation) function yields a series of functions which is dense in the space of continuous functions.\n",
     "\n",
     "In other words, any continuous function can be written as a finite sum of terms given by the composition of a linear and a sigmoidal function, i.e.\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sum_{i=0}^N \\alpha_i\\,\\sigma({\\bf w}_i\\cdot{\\bf x} + b_i),\n",
-    "\\end{equation}\n",
+    "$$\n",
     "with $\\sigma: \\mathrm{R}\\to\\mathrm{R}$ being a *sigmoidal* activation function, ${\\bf x}\\in\\mathrm{R}^n$ and ${\\bf w}_i\\in\\mathrm{R}^n$, $\\alpha_i,\\,b_i\\in\\mathrm{R}$ $\\forall i$.\n",
     "Cybenko (1989) showed that the set of functions above spans the whole space of continuous functions in $\\mathrm{R}^n$, effectively making this set *kind of a* **basis** for $\\mathrm{R}^n$, except that the functions are not linearly independent.\n",
     "\n",
@@ -47,17 +47,17 @@
     "### Where does the non-linear behaviour come from\n",
     "\n",
     "Since a neuron is a composition of a linear function with an activation function, the key to approximate non-linear functions is in the *sigmoidal* activation function. Formally a sigmoidal is a function $\\sigma: \\mathrm{R}\\to\\mathrm{R}$ such that\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sigma(x) = \n",
     "  \\begin{cases}\n",
     "  1\\qquad\\mbox{as}\\;\\;x\\to+\\infty,\\\\\n",
     "  0\\qquad\\mbox{as}\\;\\;x\\to-\\infty.\n",
     "  \\end{cases}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "The Heaviside function is an example of one of the simplest sigmoidal functions; however that is not continuous near $x=0$, thus in practice smooth approximations of it are often used. A popular one is:\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sigma(x)=\\frac{1}{1+e^{-x}}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "**But how can a linear combination of lines composed with a step function approximate any non-linear behaviour?**\n",
     "I knew from Cybenko's results that this had to be the case, so I set out and tried to understand and see this better.\n",
@@ -84,18 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "id": "de7cf443",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We are using the following device for learning: cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#collapse-hide\n",
     "import torch\n",
@@ -104,7 +96,6 @@
     "import torch.nn as nn\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(\"We are using the following device for learning:\",device)\n",
     "device = torch.device(device)\n",
     "\n",
     "%matplotlib inline\n",
@@ -232,10 +223,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "900c4e21",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "50292a16",
+   "metadata": {},
    "source": [
     "#### Dependence on the shape of the activation function\n",
     "\n",
@@ -246,9 +235,7 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "c6936a4d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,7 +251,7 @@
     }
    ],
    "source": [
-    "#collapse-show\n",
+    "#collapse-hide\n",
     "fig,ax=plt.subplots()\n",
     "ax.plot(x,25*(np.heaviside(1.2*x-4,0.5)), lw=3, label=r\"$\\rm 25\\sigma(1.2x-4)$\")\n",
     "ax.plot(x,25*(np.heaviside(-1.2*x-4,0.5)), lw=3, label=r\"$\\rm 25\\sigma(-1.2x-4)$\")\n",
@@ -277,9 +264,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfdce93d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -287,9 +272,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d1ab994",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -505,29 +488,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "be5bdabf",
-   "metadata": {},
-   "source": [
-    "##### just an ugly rework.."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32523fee",
-   "metadata": {},
-   "source": [
-    "Let me now use this piece of code to do a very awkward and ugly refactoring of the parameters above..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "644265a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide_input\n",
+    "#hide\n",
+    "\n",
+    "# Let me now use this piece of code to do a very awkward and ugly refactoring of the parameters above...\n",
+    "\n",
     "mod2_sigmoid = np.zeros(3*mods_sigmoid.units[1]+1)\n",
     "_p = []\n",
     "for name, param in mods_sigmoid.models[1].named_parameters():\n",
@@ -542,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c071c744",
+   "id": "0d721b42",
    "metadata": {},
    "source": [
     "#### Let's print out explicitly the function found with $N=2$ neurons"
@@ -563,7 +533,7 @@
     }
    ],
    "source": [
-    "#hide_input\n",
+    "#collapse_hide\n",
     "def string_func_mod(x):\n",
     "    return (\"%1.0f sig(%1.1f*x %1.1f) + %1.0f sig(%1.1f*x %1.1f) + %1.1f\" %\n",
     "           (x[2], x[0], x[1], x[5], x[3], x[4], x[6]))\n",
@@ -709,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5562678",
+   "id": "4f827390",
    "metadata": {},
    "source": [
     "While the accuracy of the NN with ReLU, as measured by $\\langle\\Delta y\\rangle$, is not significantly better than with Sigmoid for the sake of this experiment, the extrapolation out-of-domain is much better. This is because the NN model with ReLU tends to linear outside of the data domain, while the NN model with Sigmoid is approximately constant outside of the range of the training data."
@@ -725,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a338f05",
+   "id": "2a68067c",
    "metadata": {},
    "source": [
     "## <mark>Part 2:</mark> How does this compares with a Bayesian likelihood estimator\n",
@@ -738,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3ac742",
+   "id": "b2de1f2b",
    "metadata": {},
    "source": [
     "We're using the library `emcee` ([paper](https://arxiv.org/abs/1202.3665)) to run the MCMC analysis and `corner` ([paper](https://joss.theoj.org/papers/10.21105/joss.00024)) to plot the posterior distribution. "
@@ -787,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7a9229",
+   "id": "de95ccff",
    "metadata": {},
    "source": [
     "Let's run the MCMC analysis for a $N=2$ NN (see [here](https://emcee.readthedocs.io/en/stable/tutorials/line/) for a bit more context on MCMCs with `emcee`)"
@@ -844,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bba9192",
+   "id": "be380214",
    "metadata": {},
    "source": [
     "Finally, let's plot the posterior probability distribution of the 7 parameters of a NN model with $N=2$ neurons and let's also mark the location of the model we obtained above with `nn.Sequential`"
@@ -876,14 +846,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e7d8c5e",
+   "id": "3d13c952",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c4e3ce31",
+   "id": "02d310f8",
    "metadata": {},
    "source": [
     "Find the maximum probability model, i.e. the model with highest log-prob"
@@ -892,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ba92f6a0",
+   "id": "52ca1374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "576efcd5",
+   "id": "96a87464",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a725b3",
+   "id": "9fb2c82d",
    "metadata": {},
    "source": [
     "and we can also plot them side by side in comparison to the data"
@@ -938,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "79c8f43f",
+   "id": "edc4dc29",
    "metadata": {},
    "outputs": [
     {
@@ -1006,14 +976,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4e3b50a",
+   "id": "e2af1abe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "255a573b",
+   "id": "966f14a5",
    "metadata": {},
    "source": [
     "## <mark>Part 3:</mark> Dealing with more complex non-linearities\n",
@@ -1023,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42f1d290",
+   "id": "f503292d",
    "metadata": {},
    "source": [
     "As before, let's start by generating some data"
@@ -1070,14 +1040,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ee5740",
+   "id": "c05ae60f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0f7ea535",
+   "id": "0c646e7a",
    "metadata": {},
    "source": [
     "Now we can use the same `ModelsTestingActivations` class that we wrote above, just passing the new xs and ys to the `run` method. Let's use a Sigmoid activation function and let's have a look at the performance of the NN models for increasing number of neurons $N$"
@@ -1086,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a5031760",
+   "id": "dd4a539d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "358c229f",
+   "id": "870d072d",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cec6cd8",
+   "id": "6ce3ab1c",
    "metadata": {},
    "source": [
     "From these plots we can clearly notice a few important things:\n",
@@ -1145,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac25f68",
+   "id": "7dbe916a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1153,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89086eba",
+   "id": "39c6fcc1",
    "metadata": {},
    "outputs": [],
    "source": []
