fixing math equations in nb01

--- a/_notebooks/neurons_non-linearities.ipynb
+++ b/_notebooks/neurons_non-linearities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ee71b6b",
+   "id": "137b718a",
    "metadata": {},
    "source": [
     "# \"Understanding how basic linear NNs handle non-linearities\"\n",
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Lorenzo Posti\n",
-    "- categories: [neural network, NN, basics, bayesian, MCMC, jupyter]\n"
+    "- categories: [neural network, basics, bayesian, MCMC, jupyter]\n"
    ]
   },
   {
@@ -46,14 +46,16 @@
    "source": [
     "### Where does the non-linear behaviour come from\n",
     "\n",
-    "Since a neuron is a composition of a linear function with an activation function, the key to approximate non-linear functions is in the *sigmoidal* activation function. Formally a sigmoidal is a function $\\sigma: \\mathrm{R}\\to\\mathrm{R}$ such that\n",
+    "Since a neuron is a composition of a linear function with an activation function, the key to approximate non-linear functions is in the *sigmoidal* activation function. Formally a sigmoidal is a function $\\sigma: \\mathrm{R}\\to\\mathrm{R}$ such that $\\lim_{x\\to+\\infty} \\sigma(x)=1$ and $\\lim_{x\\to-\\infty} \\sigma(x)=0$.\n",
+    "<!-- \n",
     "$$\n",
     "\\sigma(x) = \n",
     "  \\begin{cases}\n",
     "  1\\qquad\\mbox{as}\\;\\;x\\to+\\infty,\\\\\n",
     "  0\\qquad\\mbox{as}\\;\\;x\\to-\\infty.\n",
     "  \\end{cases}\n",
-    "$$\n",
+    "$$ \n",
+    "-->\n",
     "The Heaviside function is an example of one of the simplest sigmoidal functions; however that is not continuous near $x=0$, thus in practice smooth approximations of it are often used. A popular one is:\n",
     "$$\n",
     "\\sigma(x)=\\frac{1}{1+e^{-x}}\n",
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50292a16",
+   "id": "1874da61",
    "metadata": {},
    "source": [
     "#### Dependence on the shape of the activation function\n",
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d721b42",
+   "id": "ae06f7cb",
    "metadata": {},
    "source": [
     "#### Let's print out explicitly the function found with $N=2$ neurons"
@@ -679,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f827390",
+   "id": "e7436adc",
    "metadata": {},
    "source": [
     "While the accuracy of the NN with ReLU, as measured by $\\langle\\Delta y\\rangle$, is not significantly better than with Sigmoid for the sake of this experiment, the extrapolation out-of-domain is much better. This is because the NN model with ReLU tends to linear outside of the data domain, while the NN model with Sigmoid is approximately constant outside of the range of the training data."
@@ -695,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a68067c",
+   "id": "a14ff000",
    "metadata": {},
    "source": [
     "## <mark>Part 2:</mark> How does this compares with a Bayesian likelihood estimator\n",
@@ -708,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2de1f2b",
+   "id": "5526a7b4",
    "metadata": {},
    "source": [
     "We're using the library `emcee` ([paper](https://arxiv.org/abs/1202.3665)) to run the MCMC analysis and `corner` ([paper](https://joss.theoj.org/papers/10.21105/joss.00024)) to plot the posterior distribution. "
@@ -757,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de95ccff",
+   "id": "6a55f109",
    "metadata": {},
    "source": [
     "Let's run the MCMC analysis for a $N=2$ NN (see [here](https://emcee.readthedocs.io/en/stable/tutorials/line/) for a bit more context on MCMCs with `emcee`)"
@@ -814,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be380214",
+   "id": "ac76d822",
    "metadata": {},
    "source": [
     "Finally, let's plot the posterior probability distribution of the 7 parameters of a NN model with $N=2$ neurons and let's also mark the location of the model we obtained above with `nn.Sequential`"
@@ -846,14 +848,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d13c952",
+   "id": "1d608924",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "02d310f8",
+   "id": "1180e851",
    "metadata": {},
    "source": [
     "Find the maximum probability model, i.e. the model with highest log-prob"
@@ -862,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "52ca1374",
+   "id": "5feaa433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "96a87464",
+   "id": "2242af74",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb2c82d",
+   "id": "1c5f9bad",
    "metadata": {},
    "source": [
     "and we can also plot them side by side in comparison to the data"
@@ -908,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "edc4dc29",
+   "id": "afb68b89",
    "metadata": {},
    "outputs": [
     {
@@ -976,14 +978,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2af1abe",
+   "id": "4f00000a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "966f14a5",
+   "id": "65bf3274",
    "metadata": {},
    "source": [
     "## <mark>Part 3:</mark> Dealing with more complex non-linearities\n",
@@ -993,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f503292d",
+   "id": "be05d1f5",
    "metadata": {},
    "source": [
     "As before, let's start by generating some data"
@@ -1040,14 +1042,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05ae60f",
+   "id": "e3a2401e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0c646e7a",
+   "id": "9cccd9f3",
    "metadata": {},
    "source": [
     "Now we can use the same `ModelsTestingActivations` class that we wrote above, just passing the new xs and ys to the `run` method. Let's use a Sigmoid activation function and let's have a look at the performance of the NN models for increasing number of neurons $N$"
@@ -1056,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "dd4a539d",
+   "id": "2e6788cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "870d072d",
+   "id": "e0b6cf0e",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce3ab1c",
+   "id": "bebcc58c",
    "metadata": {},
    "source": [
     "From these plots we can clearly notice a few important things:\n",
@@ -1115,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbe916a",
+   "id": "850928dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1123,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c6fcc1",
+   "id": "849dd73f",
    "metadata": {},
    "outputs": [],
    "source": []
