starting with notebook #2

--- a/_notebooks/neurons_non-linearities.ipynb
+++ b/_notebooks/neurons_non-linearities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "137b718a",
+   "id": "f14cc328",
    "metadata": {},
    "source": [
     "# \"Understanding how basic linear NNs handle non-linearities\"\n",
@@ -36,7 +36,7 @@
     "with $\\sigma: \\mathrm{R}\\to\\mathrm{R}$ being a *sigmoidal* activation function, ${\\bf x}\\in\\mathrm{R}^n$ and ${\\bf w}_i\\in\\mathrm{R}^n$, $\\alpha_i,\\,b_i\\in\\mathrm{R}$ $\\forall i$.\n",
     "Cybenko (1989) showed that the set of functions above spans the whole space of continuous functions in $\\mathrm{R}^n$, effectively making this set *kind of a* **basis** for $\\mathrm{R}^n$, except that the functions are not linearly independent.\n",
     "\n",
-    "Elements of this set of function as in the equation above are usually called *units* or <mark>neurons</mark>."
+    "Elements of this set of function as in the equation above are usually called *units* or **neurons**."
    ]
   },
   {
@@ -220,12 +220,12 @@
    "id": "66af3ab9",
    "metadata": {},
    "source": [
-    "These examples help in building up some intuition on how we can use these sigmoidal *building blocks* to approximate relatively simple non linear behaviours. In this specific case of a convex second-order non-linearity, the sum two scaled, shifted and mirrored step functions seems to yield a decent representation of the data close to the origin."
+    "These examples help in building up some intuition on how we can use these sigmoidal *building blocks* to approximate relatively simple non linear behaviours. In this specific case of a convex second-order non-linearity, the sum of two scaled, shifted and mirrored step functions seems to yield a decent representation of the data close to the origin."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1874da61",
+   "id": "23ab2879",
    "metadata": {},
    "source": [
     "#### Dependence on the shape of the activation function\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae06f7cb",
+   "id": "c6760e4f",
    "metadata": {},
    "source": [
     "#### Let's print out explicitly the function found with $N=2$ neurons"
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7436adc",
+   "id": "b1d92032",
    "metadata": {},
    "source": [
     "While the accuracy of the NN with ReLU, as measured by $\\langle\\Delta y\\rangle$, is not significantly better than with Sigmoid for the sake of this experiment, the extrapolation out-of-domain is much better. This is because the NN model with ReLU tends to linear outside of the data domain, while the NN model with Sigmoid is approximately constant outside of the range of the training data."
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a14ff000",
+   "id": "2db84352",
    "metadata": {},
    "source": [
     "## <mark>Part 2:</mark> How does this compares with a Bayesian likelihood estimator\n",
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5526a7b4",
+   "id": "63d6e5f3",
    "metadata": {},
    "source": [
     "We're using the library `emcee` ([paper](https://arxiv.org/abs/1202.3665)) to run the MCMC analysis and `corner` ([paper](https://joss.theoj.org/papers/10.21105/joss.00024)) to plot the posterior distribution. "
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a55f109",
+   "id": "200351d3",
    "metadata": {},
    "source": [
     "Let's run the MCMC analysis for a $N=2$ NN (see [here](https://emcee.readthedocs.io/en/stable/tutorials/line/) for a bit more context on MCMCs with `emcee`)"
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac76d822",
+   "id": "ccaa131f",
    "metadata": {},
    "source": [
     "Finally, let's plot the posterior probability distribution of the 7 parameters of a NN model with $N=2$ neurons and let's also mark the location of the model we obtained above with `nn.Sequential`"
@@ -848,14 +848,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d608924",
+   "id": "42c6b3f6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1180e851",
+   "id": "8ccce65f",
    "metadata": {},
    "source": [
     "Find the maximum probability model, i.e. the model with highest log-prob"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5feaa433",
+   "id": "faee4ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2242af74",
+   "id": "39eaacd0",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5f9bad",
+   "id": "fdd8065f",
    "metadata": {},
    "source": [
     "and we can also plot them side by side in comparison to the data"
@@ -910,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "afb68b89",
+   "id": "cb48e33c",
    "metadata": {},
    "outputs": [
     {
@@ -978,14 +978,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f00000a",
+   "id": "3f482a4c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "65bf3274",
+   "id": "1d3dd599",
    "metadata": {},
    "source": [
     "## <mark>Part 3:</mark> Dealing with more complex non-linearities\n",
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be05d1f5",
+   "id": "bd5b1514",
    "metadata": {},
    "source": [
     "As before, let's start by generating some data"
@@ -1042,14 +1042,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a2401e",
+   "id": "b5a77330",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9cccd9f3",
+   "id": "68f4f503",
    "metadata": {},
    "source": [
     "Now we can use the same `ModelsTestingActivations` class that we wrote above, just passing the new xs and ys to the `run` method. Let's use a Sigmoid activation function and let's have a look at the performance of the NN models for increasing number of neurons $N$"
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2e6788cc",
+   "id": "7405d11f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e0b6cf0e",
+   "id": "bc8b83ab",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bebcc58c",
+   "id": "b4d4f690",
    "metadata": {},
    "source": [
     "From these plots we can clearly notice a few important things:\n",
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850928dd",
+   "id": "b045e37c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849dd73f",
+   "id": "bd5ce563",
    "metadata": {},
    "outputs": [],
    "source": []
