updates on VAE and fix nb time

--- a/_notebooks/neurons_non-linearities.ipynb
+++ b/_notebooks/neurons_non-linearities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f14cc328",
+   "id": "038e1dbf",
    "metadata": {},
    "source": [
     "# \"Understanding how basic linear NNs handle non-linearities\"\n",
@@ -70,6 +70,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2572b1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03633d36",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ab2879",
+   "id": "5caf8e44",
    "metadata": {},
    "source": [
     "#### Dependence on the shape of the activation function\n",
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6760e4f",
+   "id": "2f213ec0",
    "metadata": {},
    "source": [
     "#### Let's print out explicitly the function found with $N=2$ neurons"
@@ -681,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d92032",
+   "id": "cd43e7c6",
    "metadata": {},
    "source": [
     "While the accuracy of the NN with ReLU, as measured by $\\langle\\Delta y\\rangle$, is not significantly better than with Sigmoid for the sake of this experiment, the extrapolation out-of-domain is much better. This is because the NN model with ReLU tends to linear outside of the data domain, while the NN model with Sigmoid is approximately constant outside of the range of the training data."
@@ -697,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db84352",
+   "id": "6bc32a33",
    "metadata": {},
    "source": [
     "## <mark>Part 2:</mark> How does this compares with a Bayesian likelihood estimator\n",
@@ -710,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d6e5f3",
+   "id": "657eccd6",
    "metadata": {},
    "source": [
     "We're using the library `emcee` ([paper](https://arxiv.org/abs/1202.3665)) to run the MCMC analysis and `corner` ([paper](https://joss.theoj.org/papers/10.21105/joss.00024)) to plot the posterior distribution. "
@@ -759,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200351d3",
+   "id": "02b03832",
    "metadata": {},
    "source": [
     "Let's run the MCMC analysis for a $N=2$ NN (see [here](https://emcee.readthedocs.io/en/stable/tutorials/line/) for a bit more context on MCMCs with `emcee`)"
@@ -816,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccaa131f",
+   "id": "64354815",
    "metadata": {},
    "source": [
     "Finally, let's plot the posterior probability distribution of the 7 parameters of a NN model with $N=2$ neurons and let's also mark the location of the model we obtained above with `nn.Sequential`"
@@ -848,14 +856,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c6b3f6",
+   "id": "e907157d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8ccce65f",
+   "id": "668ca5ab",
    "metadata": {},
    "source": [
     "Find the maximum probability model, i.e. the model with highest log-prob"
@@ -864,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "faee4ae6",
+   "id": "706c95d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "39eaacd0",
+   "id": "d6f20d3c",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd8065f",
+   "id": "820426ec",
    "metadata": {},
    "source": [
     "and we can also plot them side by side in comparison to the data"
@@ -910,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "cb48e33c",
+   "id": "43e955d7",
    "metadata": {},
    "outputs": [
     {
@@ -978,14 +986,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f482a4c",
+   "id": "e51f43be",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1d3dd599",
+   "id": "ae9cf4ec",
    "metadata": {},
    "source": [
     "## <mark>Part 3:</mark> Dealing with more complex non-linearities\n",
@@ -995,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5b1514",
+   "id": "bab14da5",
    "metadata": {},
    "source": [
     "As before, let's start by generating some data"
@@ -1042,14 +1050,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a77330",
+   "id": "a4bebf06",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "68f4f503",
+   "id": "75b65af9",
    "metadata": {},
    "source": [
     "Now we can use the same `ModelsTestingActivations` class that we wrote above, just passing the new xs and ys to the `run` method. Let's use a Sigmoid activation function and let's have a look at the performance of the NN models for increasing number of neurons $N$"
@@ -1058,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7405d11f",
+   "id": "2650c831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bc8b83ab",
+   "id": "b88b198a",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d4f690",
+   "id": "b1b0cfe8",
    "metadata": {},
    "source": [
     "From these plots we can clearly notice a few important things:\n",
@@ -1117,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b045e37c",
+   "id": "b05c249c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1125,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5ce563",
+   "id": "07989b9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1149,7 +1157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1163,7 +1171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
