--- a/_notebooks/2022-03-22-NN-from-scratch.ipynb
+++ b/_notebooks/2022-03-22-NN-from-scratch.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Lorenzo Posti\n",
-    "- categories: [neural network, basics, jupyter]\n"
+    "- categories: [neural_network, basics, jupyter]\n"
    ]
   },
   {
