--- a/_notebooks/2022-10-17-gaussian-processes.ipynb
+++ b/_notebooks/2022-10-17-gaussian-processes.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Lorenzo Posti\n",
-    "- categories: [gaussian processes, bayesian, jupyter]"
+    "- categories: [gaussian_processes, bayesian, jupyter]"
    ]
   },
   {
