--- a/_notebooks/2022-03-18-neurons-non-linearities.ipynb
+++ b/_notebooks/2022-03-18-neurons-non-linearities.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Lorenzo Posti\n",
-    "- categories: [neural network, basics, bayesian, MCMC, jupyter]\n"
+    "- categories: [neural_network, basics, bayesian, MCMC, jupyter]\n"
    ]
   },
   {
