--- a/_notebooks/2022-10-07-variational-autoencoder-rotcurves.ipynb
+++ b/_notebooks/2022-10-07-variational-autoencoder-rotcurves.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Lorenzo Posti\n",
-    "- categories: [neural network, autoencoder, variational autoencoder, basics, jupyter]\n"
+    "- categories: [neural_network, autoencoder, variational autoencoder, basics, jupyter]\n"
    ]
   },
   {
